# Flit

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
benches/: tokenizer.rs
migrations/: 001_init.sql
src/: config.rs  error.rs  lib.rs  main.rs  paths.rs
src/cli/: args.rs  list.rs  mod.rs  read.rs  stats.rs
src/core/: action.rs  engine.rs  mod.rs  orp.rs  timing.rs  tokenizer.rs  word.rs
src/readers/: base.rs  factory.rs  md.rs  mod.rs  stdin.rs  txt.rs
src/storage/: bookmark.rs  db.rs  fingerprint.rs  library.rs  mod.rs  models.rs  schema.rs  stats.rs
src/ui/: app.rs  mod.rs  theme.rs  tui.rs
src/ui/input/: action.rs  command.rs  keys.rs  mod.rs  mode.rs  search.rs
src/ui/render/: context.rs  guide.rs  help.rs  mod.rs  status.rs  word.rs
tests/: bookmark.rs  cli.rs  orp_golden.rs  readers.rs
tests/common/: mod.rs
tests/fixtures/: sample.md  sample.txt
