[package]
name = "flit"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["undercoverfts <undercoverfts@proton.me>"]
description = "Modern RSVP terminal reader. Inspired by pasky/speedread."
homepage = "https://github.com/kuanysh228/Flit"
repository = "https://github.com/kuanysh228/Flit"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["reading", "rsvp", "tui", "cli", "speedread"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "flit"
path = "src/main.rs"

[features]
default = ["txt", "md"]
full = ["txt", "md", "html", "docx", "pdf", "epub", "fb2", "rtf", "stats-graph"]
txt  = []
md   = []
html = ["dep:scraper"]
docx = ["dep:zip", "dep:quick-xml"]
epub = ["dep:zip", "dep:quick-xml", "dep:scraper"]
fb2  = ["dep:quick-xml"]
rtf  = []
pdf  = ["dep:pdf-extract"]
stats-graph = ["dep:textplots"]

[dependencies]
ratatui = { version = "0.28", features = ["crossterm"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
directories = "5"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-segmentation = "1"
unicode-width = "0.2"

scraper    = { version = "0.20", optional = true }
zip        = { version = "2",    optional = true }
quick-xml  = { version = "0.36", optional = true }
pdf-extract = { version = "0.7", optional = true }
textplots  = { version = "0.8",  optional = true }

[dev-dependencies]
proptest   = "1"
insta      = "1"
assert_cmd = "2"
predicates = "3"
tempfile   = "3"
criterion  = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = true
panic         = "abort"

[profile.release-debug]
inherits = "release"
debug    = true
strip    = false

[[bench]]
name    = "tokenizer"
harness = false
